--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-awesome-paginate": "^1.1.4",
+    "vue-router": "^4.1.6",
+    "vue-styled-components": "^1.6.0",
+    "vuetify": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
